--- a/Views/Tables/Index.cshtml
+++ b/Views/Tables/Index.cshtml
@@ -20,6 +20,8 @@
     @Html.ActionLink("js/ssis/admin/controller.js", "AllJSCtrl")
     |
     @Html.ActionLink("template.html", "AllHTMLTemp")
+    |
+    @Html.ActionLink("sqlscript", "SQLScript")
 </p>
 <table class="table">
     <tr>
