--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Code", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Guide", "About", "Home")</li>
+                    <li>@Html.ActionLink("Note", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Templates", "Index", "Templates")</li>
                     <li>@Html.ActionLink("Tables", "Index", "Tables")</li>
                     <li>@Html.ActionLink("Columns", "Index", "Columns")</li>
