--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,12 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-</div>
-
+<h1>CODE</h1>
 <div class="row">
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#tables_script">tables_script</button>
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#change_code">change_code</button>
@@ -89,30 +84,5 @@
 	</xmp>
     </div>
     <div id="change_code" class="collapse">
-	<h2>Model/Templates_tb.cs</h2>
-	<xmp>
-[Column(TypeName = "ntext")]
-[AllowHtml]
-[DataType(DataType.MultilineText)]
-public string Template_Content { get; set; }
-	</xmp>
-	<h2>Generate by Scaffolding</h2>
-	<h2>Controllers/TablesController -> ActionResult Edit(string id)</h2>
-	<xmp>
-ViewBag.Template_Content = TemplateConfig.Generate(tables_tb.Table_Name);
-	</xmp>
-	<h2>Views/Tables/Edit.cshtml</h2>
-	<xmp>
-<div class="form-group">
-	<label class="control-label col-md-2" for="Template_Content">Template_Content</label>
-	<div class="col-md-10">
-		Html.TextArea("Template_Content", (string)ViewBag.Template_Content)
-	</div>
-</div>	
-	</xmp>
-	<h2>Views/Templates/Edit.cshtml</h2>
-	<xmp>
-		Html.HiddenFor(model => model.Template_Content, new { id = "hidden_Template_Content" })
-	</xmp>
     </div>
 </div>
